[gd_scene load_steps=15 format=2]

[ext_resource path="res://baddies/Squirrel/Animation/SQ_JUMP_5.png" type="Texture" id=1]
[ext_resource path="res://baddies/Squirrel/Squirrel.gd" type="Script" id=2]
[ext_resource path="res://baddies/Squirrel/Animation/SQ_JUMP_6.png" type="Texture" id=3]
[ext_resource path="res://baddies/Squirrel/Animation/SQ_JUMP_3.png" type="Texture" id=4]
[ext_resource path="res://baddies/Squirrel/Animation/SQ_JUMP_1.png" type="Texture" id=5]
[ext_resource path="res://baddies/Squirrel/Animation/SQ_JUMP_0.png" type="Texture" id=6]
[ext_resource path="res://baddies/Squirrel/Animation/SQ_JUMP_2.png" type="Texture" id=7]
[ext_resource path="res://baddies/Squirrel/Animation/SQ_JUMP_4.png" type="Texture" id=8]
[ext_resource path="res://Audio/plop.wav" type="AudioStream" id=9]
[ext_resource path="res://Audio/plip.wav" type="AudioStream" id=10]
[ext_resource path="res://Audio/dec16-gotem.wav" type="AudioStream" id=11]

[sub_resource type="CapsuleShape2D" id=1]
radius = 8.0

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 3 ) ],
"loop": false,
"name": "falling_Gray",
"speed": 12.0
}, {
"frames": [ ExtResource( 6 ), ExtResource( 5 ), ExtResource( 7 ), ExtResource( 4 ), ExtResource( 8 ), ExtResource( 1 ) ],
"loop": false,
"name": "jumping_Gray",
"speed": 12.0
}, {
"frames": [ ExtResource( 6 ) ],
"loop": false,
"name": "idle_Gray",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 8, 8 )

[node name="Squirrel" type="KinematicBody2D"]
script = ExtResource( 2 )
walk_range_blocks = 2.0

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 0, -16 )
shape = SubResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
scale = Vector2( 0.25, 0.25 )
frames = SubResource( 2 )
animation = "jumping_Gray"
flip_h = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -2.5 )
shape = SubResource( 3 )

[node name="JumpSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 10 )
pitch_scale = 1.69
max_distance = 700.0

[node name="LandSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 9 )
pitch_scale = 1.69
max_distance = 700.0

[node name="RunSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 11 )
volume_db = -8.783
max_distance = 700.0
[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="area_exited" from="Area2D" to="." method="_on_Area2D_area_exited"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
